--- a/app.css
+++ b/app.css
@@ -31,37 +31,34 @@ main {
 .container__img {
   display: flex;
   position: relative;
-  border-radius: 7px;
-  background-color: hsl(178, 100%, 50%);
 }
 
 .nft {
   display: flex;
   width: 100%;
   border-radius: 7px;
-  box-sizing: border-box;
-  opacity: 1;
 }
 
-.nft:hover {
-  opacity: 0.33;
+.viewicon__img {
+  position: absolute;
+  border-radius: 7px;
+  background-color: hsla(178, 100%, 50%, 0.66);
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.viewicon__img:hover {
+  opacity: 1;
 }
 
 .view__img {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   width: 48px;
   height: 48px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 1;
-}
-
-.view__img:hover {
-  opacity: 1;
 }
 
 .description {
