--- a/app.css
+++ b/app.css
@@ -161,6 +161,10 @@ p {
   font-size: 16px;
   padding: 0 0 0 1em;
   width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
   display: flex;
   align-items: center;
 }
