--- a/app.css
+++ b/app.css
@@ -141,6 +141,7 @@ p {
   border-top: 1px solid hsl(215, 32%, 27%);
   display: flex;
   justify-content: start;
+  align-items: center;
 }
 
 .hero__img {
